@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.2-18
-Date: 2019-07-02
+Date: 2019-07-04
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
